Actualiza backend Monarca v2 con Supabase y nueva estructura de productos